# mjcarroll-custom-msgs

./: CMakeLists.txt  README.md  foo_main.cc
lib1/: CMakeLists.txt  lib1.cc  lib1.hh
lib2/: CMakeLists.txt  lib2.cc  lib2.hh
proto/mjcarroll/foo/: depends.proto  my_bytes.proto
proto/mjcarroll2/foo/: depends2.proto
